2021-05-09 implement with pytorch lightning

--- a/ResNet.ipynb
+++ b/ResNet.ipynb
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -145,6 +145,26 @@
     "    testset, batch_size=batch_size,\n",
     "    shuffle=True, num_workers=2\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "50000"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 5
+    }
+   ],
+   "source": [
+    "len(trainset)"
    ]
   },
   {
